...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@{viewModel.profile.isAdmin ? @string/input_pin_password_as_admin : @string/input_pin_password_as_user}"
            android:minHeight="56dp"
            app:errorMessage="@{viewModel.errorMessage}"
            app:layout_constraintEnd_toStartOf="@id/show_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/pin_password_input_pin_edit_text"
              style="@style/TextInputEditText"
...
              android:inputType="numberPassword"
              android:maxLength="@{viewModel.profile.pin.length()}"
              android:textSize="14sp" />
          </com.google.android.material.textfield.TextInputLayout>

          <TextView
            android:id="@+id/forgot_pin"
            style="@style/Heading5ViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:paddingTop="8dp"
...
            android:layout_height="wrap_content"
            android:text="Enter and confirm a 5-digit PIN to continue"
            android:textSize="14sp"
            android:textColor="@color/oppia_gray"
            android:layout_marginTop="8dp"/>
            <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.errorMessage}"
            android:textColor="@color/red"
            android:layout_marginTop="4dp"/>

...
            app:layout_constraintBottom_toBottomOf="@+id/pin_password_input_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/pin_password_input_pin">

            <ImageView
              android:id="@+id/show_hide_password_image_view"
              android:layout_width="32dp"
              android:layout_height="32dp"
              android:layout_gravity="center_horizontal"
              android:contentDescription="@{viewModel.showPassword ? @string/password_shown_icon : @string/password_hidden_icon}"
              app:srcCompat="@{viewModel.showPassword ? @drawable/ic_show_eye_icon : @drawable/ic_hide_eye_icon}"
              app:tint="@color/component_color_pin_password_activity_show_hide_color" />
...
