...
      android:layout_marginStart="4dp"
      android:fontFamily="sans-serif"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="12sp" />

    <EditText
      android:id="@+id/input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:background="@drawable/add_profile_edit_text_background"
      android:fontFamily="sans-serif"
      android:minHeight="48dp"
...
